--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -1,14 +1,14 @@
 {
   "version": "0.0.1",
   "scripts": {
-    "lint": "standard --verbose | snazzy",
+    "lint": "eslint App Tests",
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
-    "fixcode": "standard --fix",
+    "fixcode": "eslint --fix App Tests",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean && npm i",
-    "test": "ava",
-    "test:watch": "ava --watch",
+    "test": "npm run lint && jest",
+    "test:watch": "jest --watch",
     "coverage": "nyc ava && nyc report --reporter=html && open coverage/index.html || xdg-open coverage/index.html",
     "android:build": "cd android && ./gradlew assembleRelease",
     "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
@@ -32,45 +32,33 @@
     "seamless-immutable": "^7.0.1"
   },
   "devDependencies": {
-    "ava": "^0.18.2",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^19.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react-native": "^1.9.1",
     "enzyme": "^2.6.0",
-    "mockery": "^2.0.0",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "husky": "^0.13.1",
+    "jest": "^19.0.2",
+    "mockery": "^2.0.0",
     "nyc": "^10.1.2",
     "react-addons-test-utils": "^15.3.1",
     "react-dom": "^15.4.0",
     "react-native-mock": "^0.3.1",
-    "snazzy": "^6.0.0",
-    "standard": "8.6.0"
+    "snazzy": "^6.0.0"
   },
-  "ava": {
-    "files": [
-      "Tests/**/*.js",
-      "!Tests/Setup.js"
+  "jest": {
+    "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/test/setup.js"
     ],
-    "require": [
-      "babel-register",
-      "babel-polyfill",
-      "react-native-mock/mock",
-      "./Tests/Setup"
-    ],
-    "babel": "inherit"
-  },
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [
-      "describe",
-      "it",
-      "fetch",
-      "navigator",
-      "__DEV__",
-      "XMLHttpRequest",
-      "FormData",
-      "React$Element"
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-navigation)"
     ]
   },
   "config": {
